# my-project-template

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Justfile  Makefile  README.md  docker-compose.yaml  flake.nix  main.py  pyproject.toml  renovate.json
.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.devcontainer.yaml  onCreateCommand.sh  postAttachCommand.sh  postCreateCommand.sh  postStartCommand.sh
.devcontainer.example/: Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.devcontainer.yaml  onCreateCommand.sh  postCreateCommand.sh  updateContentCommand.sh
.github/: copilot-instructions.md  dependabot.yaml
.github/chatmodes/: Onboarding support.chatmode.md
.github/instructions/: AI-NOTE.instructions.md  Documentation guideline.instructions.md
.github/prompts/: Initialize template.prompt.md  Score (for fun).prompt.md  boostrap.prompt.md  bootstrap.prompt.md  initialize-template.prompt.md
.github/skills/devcontainer-cli/: SKILL.md
.github/workflows/: ci.yaml  devcontainer.yaml
.vscode.example/: extensions.json  launch.json  mcp.json  settings.json
src/: main.py  test_main.py
tests/: test_main.py
