[project]
name = "my-project-template"
version = "0.1.0"
description = "My project starter template with Dev Container configured."
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["fastapi[standard]==0.136.3"]

[dependency-groups]
dev = [
    "coverage==7.14.1",
    "factory-boy==3.3.3",
    "faker==40.21.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-sugar==1.1.1",
    "ruff==0.15.15",
    "ty==0.0.42",
]

[tool.uv]

[tool.pytest.ini_options]
addopts = ["--cov", "--cov-report=term"]
markers = [
    "unit: mark tests as unit tests",
    "integration: mark tests as integration tests",
]

[tool.coverage.run]
include = ["src/*"]
omit = ["test_*.py"]
